cmake_minimum_required(VERSION 3.4)
project(formatter_ex)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(hello_world hello_world.cpp)
target_include_directories(hello_world PUBLIC /lab05/formatter_ex_lib)
target_include_directories(hello_world PUBLIC /lab05/formatter_lib)
target_link_libraries(hello_world /lab05/formatter_ex_lib/libformatter_ex.a)
target_link_libraries(hello_world /lab05/formatter_lib/libformatter.a)
