cmake_minimum_required(VERSION 3.4)
project(formatter_ex)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(solverlib STATIC /home/runner/work/lab05/lab05/solver_lib/solver.cpp)
target_include_directories(solverlib PUBLIC /lab05/solver_lib)
add_executable(solver equation.cpp)
target_link_libraries(solver /lab05/formatter_ex_lib/libformatter_ex.a)
target_include_directories(solver PUBLIC /lab05/formatter_ex_lib)
target_include_directories(solver PUBLIC /lab05/formatter_lib)
target_link_libraries(solver /lab05/formatter_lib/libformatter.a)
target_link_libraries(solver solverlib)
